--- a/WebContent/css/main.css
+++ b/WebContent/css/main.css
@@ -5,20 +5,29 @@
 }
 
 html,body {
-	background:#F4EBDF;
+	background:rgba(226,224,209,1);
 }
 
 #searchBar {
-	background:#FFE5CC;
+	position:fixed;
+	background-image:url(../site_images/masthead_background.jpg);
+	background-repeat:repeat;
 	color:#411F00;
 	font-size: 14px;
 	width: 100%;
 	height: 100px;
-	display:block;
+	display:table;
+	top:0px;
+	z-index:10000;
+}
+
+#searchBar form {
+	display:table-cell;
+	float:left;
 }
 
 #searchBar div {
-	display:inline-block;
+	display:table-cell;
 	vertical-align:middle;
 }
 
@@ -26,24 +35,30 @@ html,body {
 	vertical-align:middle;
 	display:inline-block;
 }
+#radio {
+	padding-left: 30%;
+	
+}
+
 #searchBar div {
 	margin:0px 20px 0px 0px;
 	cursor:pointer;
 }
 #searchBar div input {
-	width:400px;
 	padding:5px;
 	font-size:14px;
 	border-radius:8px;
 	border:none;
 }
 
-
 #footer {
-	
-	padding-top: 70%;
-	
-	height: 10px;
+	padding:0px;
+	bottom:0px;
+	left:0px;
+	right:0px;
+	top:auto;
+	background:url(../site_images/bookrow.jpg);
+	height: 57px;
 	width:100%;
-
+	text-align:center;
 }
